<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tripzor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_trip_list">Trip List</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_password_recovery">Password Recovery</string>
    <string name="title_activity_password_change">PasswordChange</string>
    <string name="password_change">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_add_trip">New Trip</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date (yyyy-mm-dd)</string>
    <string name="end_date">End Date (yyyy-mm-dd)</string>
    <string name="create_trip">CREATE TRIP</string>
    <string name="loading">LOADING…</string>
    <string name="closeDrawer">closeDrawer</string>
    <string name="openDrawer">openDrawer</string>
    <string name="info">Info</string>
    <string name="old_password">Old Password</string>
    <string name="title_activity_trip_detail">Trip</string>
    <string name="deselect">Deselect All</string>
    <string name="delete">Delete</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_info">Update Info</string>
    <string name="prompt_nick">Nickname</string>
    <string name="start_date_tv">Start Date</string>
    <string name="end_date_tv">End Date</string>
    <string name="participants">Participants</string>
    <string name="title_activity_search_participants">Search Participants</string>
    <string name="search_user">Search User</string>
    <string name="graphics">Graphics</string>
    <string name="new_button">New Button</string>

</resources>
