<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.ifalot.tripzor.main.AddTrip">

    <LinearLayout
            android:id="@+id/new_trip_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <EditText
                android:id="@+id/trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        <EditText
                android:id="@+id/trip_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        <EditText
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />

        <Button
                android:id="@+id/create_trip_button"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/create_trip"
                android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
