<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_height="match_parent"
              android:layout_width="match_parent">

    <TableLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:stretchColumns="0,1"
                 tools:context="com.ifalot.tripzor.main.TripDetail">

        <TableRow>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:text="@string/location" />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/location_tv"
                      android:gravity="end"
                      android:textColor="@color/md_material_blue_800"
                      android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/tripdetail_margins"
                      android:text="@string/start_date_tv" />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/startdate_tv"
                      android:gravity="end"
                      android:layout_marginTop="@dimen/tripdetail_margins"
                      android:textSize="24sp" />

        </TableRow>

        <TableRow>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="24sp"
                      android:textStyle="bold"
                      android:layout_marginTop="@dimen/tripdetail_margins"
                      android:text="@string/end_date_tv" />

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/enddate_tv"
                      android:gravity="end"
                      android:layout_marginTop="@dimen/tripdetail_margins"
                      android:textSize="24sp" />

        </TableRow>

    </TableLayout>

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:text="@string/participants"
                  android:layout_gravity="center"
                  android:layout_alignParentTop="true"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="8dp"
                  android:layout_marginBottom="6dp"
                  android:id="@+id/participants_label"/>

        <ListView android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/participant_list"
                  android:layout_below="@+id/participants_label"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true" />

        <android.support.design.widget.FloatingActionButton
                android:id="@+id/button_add_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:src="@drawable/ic_action_new" />

    </RelativeLayout>

</LinearLayout>